--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<!--este apartado es para poder ponerle un encabezado a nuestro sistema o mejor dicho a nuestra pagina web-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Control ESP32 - Dashboard IoT</title>
+  <title>Control ESP32 - Dashboard IoT</title> <!--esto nos sirve para poder poner un titulo a nuestra pagina-->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!--en esta parte se crean los estilos del sistema para que se vea mejor la pagina web-->
   <style>
     :root {
       --primary: #4361ee;
@@ -398,6 +400,7 @@
     .card:nth-child(5) { animation-delay: 0.5s; }
   </style>
 </head>
+  <!--en esta parte del codigo ira el contenido de la pagina web-->
 <body>
   <header>
     <div class="header-content">
